Fix[SMW-143 SMW-169]: add custom scrollbar, overide antd button hover styles

--- a/src/app/backoffice/pages/Login/styles.scss
+++ b/src/app/backoffice/pages/Login/styles.scss
@@ -10,4 +10,9 @@
     box-shadow: none;
     outline: none;
   }
+
+  .ant-btn:hover {
+    color: white;
+    border-color: transparent;
+  }
 }
